--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,7 @@ dependencies {
     // GLIDE
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "com.github.bumptech.glide:annotations:$glide_version"
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     // Slider
     implementation 'com.ss.bannerslider:bannerslider:2.0.0'
