--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.51'
+    ext.kotlin_version = '1.2.41'
     ext.retrofit_version = '2.4.0'
-    ext.glide_version = '4.6.1'
+    ext.glide_version = '4.7.1'
     ext.anko_version='0.10.5'
 
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
