--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
 
     androidExtensions { experimental = true }
@@ -67,5 +71,9 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:27.1.1'
 
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.android.support:multidex:1.0.3'
+
+    // Toolbar
+    implementation 'com.github.RaviKoradiya:Toolbar-Center-Title:1.0.3'
 }
